--- a/examples/01-simple-client/index.html
+++ b/examples/01-simple-client/index.html
@@ -21,7 +21,8 @@
   <main>
     <p>Channel:</p>
     <input id="channel" type="text" maxlength="200" placeholder="Your channel">
-
+    <button id="clear-button">Clear Channel</button>
+    
     <p>Add a new message:</p>
     <form>
       <input id="message" type="text" maxlength="200" placeholder="Your message">
