--- a/examples/04-Encrypt/index.html
+++ b/examples/04-Encrypt/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <h1> 
-      Simple Message Cryptography
+      Encrypt
     </h1>
   </header>
 
@@ -22,6 +22,9 @@
     <p>Channel:</p>
     <input id="channel" type="text" maxlength="200" placeholder="Your channel">
     <button id="clear-button">Clear Channel</button>
+  
+    <p>User:</p>
+    <input id="user" type="text" maxlength="200" placeholder="Your name">
     
     <p>Add a new message:</p>
     <form>
